feature(api) [sc-3160]Added artifact ready api and its handler
